# dust3r-pytorch-inference

./: README.md  example.py  example_image_global.py  example_image_pair.py  example_minimal.py  example_raw_output.py  example_webcam_all_to_one.py  export_onnx.py  pyproject.toml  rope2d.py  webcam_example.py
dust3r/: __init__.py  blocks.py  common.py  decoder.py  dust3r.py  encoder.py  head.py  postprocess.py  preprocess.py  rope2d.py  visualization.py
dust3r/heads/: __init__.py  dpt_head.py  linear_head.py  postprocess.py
duster/: blocks.py  dust3r.py  rope2d.py
tests/: test_dust3r.py
